# drf-simple-apikey

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  vercel.json
.github/workflows/: ci-cd-live.yml  ci-cd.yml  ci-test.yml
docs/: analytics.rst  authentication.rst  changelog.rst  conf.py  customizing_api_key_model.rst  development_and_contributing.md  development_and_contributing.rst  getting_started.rst  index.rst  migrating.rst  permissions.rst  rotation.rst  security.rst  settings.rst
drf-docs/: README.md  jsconfig.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
drf-docs/app/: global.css  layout.tsx
drf-docs/app/(home)/: layout.tsx  page.tsx
drf-docs/app/docs/: layout.tsx
drf-docs/app/docs/[[...slug]]/: page.tsx
drf-docs/app/og/docs/[...slug]/: route.tsx
drf-docs/content/docs/: analytics.mdx  authentication.mdx  changelog.mdx  customizing-api-key-model.mdx  development-and-contributing.mdx  getting-started.mdx  index.mdx  meta.json  migrating.mdx  permissions.mdx  rotation.mdx  security.mdx  settings.mdx
drf-docs/content/docs/examples/: saas-platform.mdx
drf-docs/lib/: layout.shared.tsx
drf-docs/public/: site.webmanifest
drf_apikey/: __init__.py  apps.py  backends.py  crypto.py  models.py  mutli_api_crypto.py  parser.py  permissions.py  settings.py  utils.py
drf_apikey/analytics/: apps.py  middleware.py  models.py
drf_apikey/analytics/migrations/: 0001_initial.py
drf_apikey/management/commands/: rotation.py
drf_apikey/migrations/: 0001_initial.py  0002_alter_apikey_options.py
drf_apikey/rotation/: apps.py  utils.py
drf_apikey/rotation/migrations/: 0001_initial.py
drf_simple_apikey/: __init__.py  admin.py  apps.py  backends.py  crypto.py  models.py  mutli_api_crypto.py  parser.py  permissions.py  settings.py  utils.py
drf_simple_apikey/analytics/: admin.py  apps.py  middleware.py  models.py
drf_simple_apikey/analytics/migrations/: 0001_initial.py
drf_simple_apikey/ip_management/: admin.py  apps.py  models.py  permissions.py
drf_simple_apikey/ip_management/migrations/: 0001_initial.py
drf_simple_apikey/management/commands/: rotation.py
drf_simple_apikey/migrations/: 0001_initial.py  0002_alter_apikey_options.py  0003_alter_apikey_id.py  0003_apikey_blacklisted_ips_apikey_whitelisted_ips.py
drf_simple_apikey/rotation/: admin.py  apps.py  utils.py
example/: manage.py  requirements.txt  routers.py
example/ApiKey/: asgi.py  settings.py  urls.py  wsgi.py
example/fruits/: apps.py  viewsets.py
project/project/: settings.py
rest_framework_simple_api_key/: __init__.py  admin.py  apps.py  backends.py  crypto.py  middleware.py  models.py  mutli_api_crypto.py  parser.py  permissions.py  settings.py  utils.py
rest_framework_simple_api_key/analytics/: admin.py  apps.py  middleware.py  models.py
rest_framework_simple_api_key/analytics/migrations/: 0001_initial.py
rest_framework_simple_api_key/management/commands/: generate_fernet_key.py  rotation.py
rest_framework_simple_api_key/migrations/: 0001_initial.py  0002_alter_apikey_options.py
rest_framework_simple_api_key/rotation/: admin.py  apps.py  models.py  utils.py
rest_framework_simple_api_key/rotation/migrations/: 0001_initial.py
scripts/: makemigrations.py
test_project/project/: urls.py
tests/: conftest.py  test_admin.py  test_analytics.py  test_analytics_middleware.py  test_api_authentication.py  test_api_key_ crypto.py  test_api_key_crypto.py  test_api_key_multi_crypto.py  test_custom_django_command.py  test_ip_management.py  test_middleware.py  test_models.py  test_permissions.py  urls.py
tests/fixtures/: api_key.py  user.py
