# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djangorestframework-simple-apikey"
version = "1.1.0"
dynamic = ["description", "readme", "optional-dependencies", "dependencies", "classifiers", "authors", "license"]