[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:rest_framework_simple_api_key/version.py]
search = VERSION = "{current_version}"
replace = VERSION = "{new_version}"

[bumpversion:file:CHANGELOG.md]
search =
	[Unreleased]
	------------
replace =
	[Unreleased]
	------------

	[v{new_version}] - {utcnow:%%Y-%%m-%%d}
	------------------

[bdist_wheel]
universal = 1

[metadata]
name = djangorestframework-simple-apikey
version = "{current_version}"
url = https://github.com/koladev32/djangorestframework-simple-apikey
license = MIT
author = Kolawole Mangabo
author_email = onaelmangabo@gmail.com
description = API Key authentication and permissions for Django REST.
long_description = file: README.md
long_description_content_type = text/markdown
keyword = django django-rest api-key apikey
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.0
    djangorestframework == 3.13.1
	cryptography == 38.0.4


[options.extras_require]
test =
	pytest
	coverage
	pytest-django
tooling =
	autoflake
	black == 22.3.0
	flake8
	flake8-bugbear
	flake8-comprehensions

[options.packages.find]
exclude =
	docs*
	tests*
	.github*